fix input on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,8 +17,8 @@
   --border-color: #eaeff7;
 
   --danger: #c95151;
-  --danger-secondary: #f9d3d3;
-  --danger-tertiary: #f8e0e0;
+  --danger-secondary: #f2c5c5;
+  --danger-tertiary: #f6d4d4;
 
   --bg: #eee;
   --foreground-rgb: 0, 0, 0;
